--- a/werewolf/maindialog.ui
+++ b/werewolf/maindialog.ui
@@ -6,13 +6,289 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>414</width>
+    <height>733</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>mainDialog</string>
   </property>
+  <widget class="QPushButton" name="pb_icon">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>51</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>头像</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_name">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>0</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>昵称</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_sex">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>0</y>
+     <width>31</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>性别</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_level">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>30</y>
+     <width>72</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>等级：LV1</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_gold">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>0</y>
+     <width>31</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>币</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_gold">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>10</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>100000</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_diamond">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>0</y>
+     <width>31</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>钻</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_diamond">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>10</y>
+     <width>61</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>100000</string>
+   </property>
+  </widget>
+  <widget class="QTabWidget" name="tb">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>60</y>
+     <width>421</width>
+     <height>671</height>
+    </rect>
+   </property>
+   <property name="tabPosition">
+    <enum>QTabWidget::North</enum>
+   </property>
+   <property name="tabShape">
+    <enum>QTabWidget::Rounded</enum>
+   </property>
+   <property name="currentIndex">
+    <number>0</number>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="elideMode">
+    <enum>Qt::ElideNone</enum>
+   </property>
+   <property name="usesScrollButtons">
+    <bool>true</bool>
+   </property>
+   <property name="documentMode">
+    <bool>false</bool>
+   </property>
+   <property name="tabsClosable">
+    <bool>false</bool>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="tabBarAutoHide">
+    <bool>false</bool>
+   </property>
+   <widget class="QWidget" name="tb_game">
+    <attribute name="title">
+     <string>  游戏  </string>
+    </attribute>
+    <widget class="QPushButton" name="pb_qqgroup">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>610</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>官方群</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_random">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>480</y>
+       <width>201</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>随机匹配</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_createRoom">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>340</y>
+       <width>201</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>创建房间</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_roomList">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>410</y>
+       <width>201</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>房间列表</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_rank">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>610</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>排行</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_course">
+     <property name="geometry">
+      <rect>
+       <x>260</x>
+       <y>610</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>教程</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_reward">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>610</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>抽奖</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_task">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>610</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>任务</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tb_space">
+    <attribute name="title">
+     <string> 动态 </string>
+    </attribute>
+   </widget>
+   <widget class="QWidget" name="tb_chat">
+    <attribute name="title">
+     <string>  消息 </string>
+    </attribute>
+   </widget>
+   <widget class="QWidget" name="tb_friend">
+    <attribute name="title">
+     <string> 好友  </string>
+    </attribute>
+   </widget>
+   <widget class="QWidget" name="tb_mine">
+    <attribute name="title">
+     <string> 我的  </string>
+    </attribute>
+   </widget>
+  </widget>
  </widget>
  <resources/>
  <connections/>
