--- a/werewolf/registerdialog.ui
+++ b/werewolf/registerdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>422</width>
-    <height>657</height>
+    <width>401</width>
+    <height>741</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLineEdit" name="le_username">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>270</y>
+     <x>160</x>
+     <y>370</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -32,8 +32,8 @@
   <widget class="QLabel" name="lb_username">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>270</y>
+     <x>60</x>
+     <y>370</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -51,8 +51,8 @@
   <widget class="QLabel" name="lb_passwd">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>320</y>
+     <x>60</x>
+     <y>420</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -70,8 +70,8 @@
   <widget class="QLabel" name="lb_passagain">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>370</y>
+     <x>50</x>
+     <y>470</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -89,8 +89,8 @@
   <widget class="QLabel" name="lb_sex">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>470</y>
+     <x>60</x>
+     <y>570</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -108,8 +108,8 @@
   <widget class="QLabel" name="lb_signal">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>90</y>
+     <x>140</x>
+     <y>150</y>
      <width>131</width>
      <height>111</height>
     </rect>
@@ -127,8 +127,8 @@
   <widget class="QLabel" name="lb_name">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>420</y>
+     <x>60</x>
+     <y>520</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -146,8 +146,8 @@
   <widget class="QLabel" name="lb_born">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>510</y>
+     <x>60</x>
+     <y>610</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -165,8 +165,8 @@
   <widget class="QLineEdit" name="le_passwd">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>320</y>
+     <x>160</x>
+     <y>420</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -184,8 +184,8 @@
   <widget class="QLineEdit" name="le_passagain">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>370</y>
+     <x>160</x>
+     <y>470</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -203,8 +203,8 @@
   <widget class="QLineEdit" name="le_name">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>420</y>
+     <x>160</x>
+     <y>520</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -219,8 +219,8 @@
   <widget class="QRadioButton" name="rb_boy">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>470</y>
+     <x>160</x>
+     <y>570</y>
      <width>51</width>
      <height>19</height>
     </rect>
@@ -232,8 +232,8 @@
   <widget class="QRadioButton" name="rb_girl">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>470</y>
+     <x>280</x>
+     <y>570</y>
      <width>61</width>
      <height>19</height>
     </rect>
@@ -245,8 +245,8 @@
   <widget class="QPushButton" name="pb_register">
    <property name="geometry">
     <rect>
-     <x>302</x>
-     <y>550</y>
+     <x>282</x>
+     <y>650</y>
      <width>61</width>
      <height>28</height>
     </rect>
@@ -258,8 +258,8 @@
   <widget class="QPushButton" name="pb_clear">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>550</y>
+     <x>150</x>
+     <y>650</y>
      <width>61</width>
      <height>28</height>
     </rect>
@@ -271,8 +271,8 @@
   <widget class="QDateEdit" name="de_born">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>510</y>
+     <x>160</x>
+     <y>610</y>
      <width>171</width>
      <height>22</height>
     </rect>
@@ -281,8 +281,8 @@
   <widget class="QPushButton" name="pb_return">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>620</y>
+     <x>10</x>
+     <y>700</y>
      <width>71</width>
      <height>28</height>
     </rect>
@@ -290,6 +290,140 @@
    <property name="text">
     <string>返回</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="wdg_title" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>400</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(222, 222, 222);</string>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QPushButton" name="pb_image">
+      <property name="minimumSize">
+       <size>
+        <width>41</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>41</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>^_^</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="lb_title">
+      <property name="text">
+       <string>登录</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>213</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pb_min">
+      <property name="minimumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pb_close">
+      <property name="minimumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>X</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
