--- a/werewolf/startdialog.ui
+++ b/werewolf/startdialog.ui
@@ -6,21 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>397</width>
-    <height>658</height>
+    <width>401</width>
+    <height>741</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>397</width>
-    <height>658</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>397</width>
-    <height>658</height>
-   </size>
   </property>
   <property name="font">
    <font>
@@ -35,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>520</y>
+     <y>600</y>
      <width>181</width>
      <height>51</height>
     </rect>
@@ -47,55 +35,170 @@
   <widget class="QPushButton" name="pb_notice">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>20</y>
-     <width>61</width>
-     <height>61</height>
+     <x>350</x>
+     <y>230</y>
+     <width>51</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>公告</string>
    </property>
   </widget>
-  <widget class="QLabel" name="lb_remain">
+  <widget class="QLabel" name="lb_backGrd">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>580</y>
-     <width>341</width>
-     <height>21</height>
+     <x>0</x>
+     <y>30</y>
+     <width>401</width>
+     <height>711</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>华光细黑_CNKI</family>
-     <pointsize>7</pointsize>
-    </font>
-   </property>
    <property name="text">
-    <string>抵制不良游戏，拒接盗版游戏，注意自我保护，谨防上当受骗</string>
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resources.qrc">:/tupian/startBackGround.jpg</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QWidget" name="wdg_title" native="true">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>130</y>
-     <width>161</width>
-     <height>91</height>
+     <x>-1</x>
+     <y>-1</y>
+     <width>401</width>
+     <height>31</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>华光美黑_CNKI</family>
-     <pointsize>25</pointsize>
-    </font>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(222, 222, 222);</string>
    </property>
-   <property name="text">
-    <string>启动界面</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QPushButton" name="pb_image">
+      <property name="minimumSize">
+       <size>
+        <width>41</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>41</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>^_^</string>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="lb_title">
+      <property name="minimumSize">
+       <size>
+        <width>81</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>81</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>狼人杀</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>214</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pb_min">
+      <property name="minimumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pb_close">
+      <property name="minimumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>X</string>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
+  <zorder>lb_backGrd</zorder>
+  <zorder>pb_joinGame</zorder>
+  <zorder>pb_notice</zorder>
+  <zorder>wdg_title</zorder>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
