--- a/werewolf/startdialog.ui
+++ b/werewolf/startdialog.ui
@@ -28,6 +28,12 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华光淡古印_CNKI</family>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>进入游戏</string>
    </property>
@@ -36,10 +42,16 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>230</y>
+     <y>160</y>
      <width>51</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华光淡古印_CNKI</family>
+     <pointsize>15</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>公告</string>
@@ -69,7 +81,7 @@
     <rect>
      <x>-1</x>
      <y>-1</y>
-     <width>401</width>
+     <width>405</width>
      <height>31</height>
     </rect>
    </property>
@@ -106,6 +118,11 @@
         <height>31</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>方正粗黑宋简体</family>
+       </font>
+      </property>
       <property name="text">
        <string>^_^</string>
       </property>
@@ -127,6 +144,12 @@
         <width>81</width>
         <height>31</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>华文新魏</family>
+        <pointsize>14</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>狼人杀</string>
