--- a/werewolf/createroomform.ui
+++ b/werewolf/createroomform.ui
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>30</y>
+     <y>40</y>
      <width>72</width>
      <height>21</height>
     </rect>
@@ -56,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>30</y>
+     <y>40</y>
      <width>61</width>
      <height>19</height>
     </rect>
@@ -69,7 +69,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>30</y>
+     <y>40</y>
      <width>61</width>
      <height>19</height>
     </rect>
@@ -82,7 +82,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>70</y>
+     <y>80</y>
      <width>72</width>
      <height>21</height>
     </rect>
@@ -95,7 +95,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>70</y>
+     <y>80</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -110,7 +110,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>110</y>
+     <y>120</y>
      <width>72</width>
      <height>21</height>
     </rect>
@@ -123,7 +123,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>110</y>
+     <y>120</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -133,7 +133,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>150</y>
+     <y>160</y>
      <width>72</width>
      <height>21</height>
     </rect>
@@ -146,7 +146,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>150</y>
+     <y>160</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -176,7 +176,7 @@
    <property name="geometry">
     <rect>
      <x>11</x>
-     <y>190</y>
+     <y>200</y>
      <width>91</width>
      <height>21</height>
     </rect>
@@ -189,7 +189,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>190</y>
+     <y>200</y>
      <width>21</width>
      <height>19</height>
     </rect>
@@ -202,7 +202,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>230</y>
+     <y>240</y>
      <width>31</width>
      <height>21</height>
     </rect>
@@ -215,12 +215,46 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>230</y>
+     <y>240</y>
      <width>121</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>1</x>
+     <y>-5</y>
+     <width>281</width>
+     <height>331</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(36, 53, 81);
+background-color: rgb(0, 206, 206);
+background-color: rgb(0, 179, 179);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>label</zorder>
+  <zorder>pb_cancel</zorder>
+  <zorder>pb_commit</zorder>
+  <zorder>lb_mode</zorder>
+  <zorder>rb_audio</zorder>
+  <zorder>rb_video</zorder>
+  <zorder>lb_playMethod</zorder>
+  <zorder>cmb_playMethod</zorder>
+  <zorder>lb_playerNum</zorder>
+  <zorder>sb_playerNum</zorder>
+  <zorder>lb_level</zorder>
+  <zorder>cmb_level</zorder>
+  <zorder>lb_passwd</zorder>
+  <zorder>cb_passwd</zorder>
+  <zorder>lb_ispasswd</zorder>
+  <zorder>le_passwd</zorder>
  </widget>
  <resources/>
  <connections/>
