--- a/werewolf/logindialog.ui
+++ b/werewolf/logindialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
-    <height>741</height>
+    <width>480</width>
+    <height>1000</height>
    </rect>
   </property>
   <property name="font">
@@ -18,30 +18,11 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>30</y>
-     <width>401</width>
-     <height>711</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap resource="resources.qrc">:/tupian/startBackGround.jpg</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="le_passwd">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>560</y>
+     <x>160</x>
+     <y>800</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -53,8 +34,8 @@
   <widget class="QPushButton" name="pb_login">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>600</y>
+     <x>270</x>
+     <y>840</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -72,8 +53,8 @@
   <widget class="QPushButton" name="pb_feedback">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>660</y>
+     <x>420</x>
+     <y>900</y>
      <width>51</width>
      <height>28</height>
     </rect>
@@ -91,8 +72,8 @@
   <widget class="QPushButton" name="pb_register">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>600</y>
+     <x>160</x>
+     <y>840</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -110,8 +91,8 @@
   <widget class="QLabel" name="lb_passwd">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>560</y>
+     <x>100</x>
+     <y>800</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -130,8 +111,8 @@
   <widget class="QLabel" name="lb_username">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>510</y>
+     <x>80</x>
+     <y>750</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -151,8 +132,8 @@
   <widget class="QLineEdit" name="le_username">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>510</y>
+     <x>160</x>
+     <y>750</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -166,8 +147,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
-     <height>31</height>
+     <width>481</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -306,6 +287,34 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>40</y>
+     <width>481</width>
+     <height>961</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resources.qrc">:/tupian/startBackGround.jpg</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <zorder>label</zorder>
+  <zorder>le_passwd</zorder>
+  <zorder>pb_login</zorder>
+  <zorder>pb_feedback</zorder>
+  <zorder>pb_register</zorder>
+  <zorder>lb_passwd</zorder>
+  <zorder>lb_username</zorder>
+  <zorder>le_username</zorder>
+  <zorder>wdg_title</zorder>
  </widget>
  <resources>
   <include location="resources.qrc"/>
