--- a/werewolf/maindialog.ui
+++ b/werewolf/maindialog.ui
@@ -6,54 +6,33 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
-    <height>741</height>
+    <width>481</width>
+    <height>1000</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>mainDialog</string>
   </property>
-  <widget class="QPushButton" name="pb_icon">
+  <widget class="QLabel" name="lb_0_name">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>30</y>
-     <width>51</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>18</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="flat">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lb_name">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>30</y>
-     <width>41</width>
-     <height>31</height>
+     <x>70</x>
+     <y>50</y>
+     <width>191</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>昵称</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pb_sex">
+  <widget class="QPushButton" name="pb_0_sex">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>30</y>
-     <width>25</width>
-     <height>25</height>
+     <x>60</x>
+     <y>70</y>
+     <width>31</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -63,24 +42,24 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="lb_level">
+  <widget class="QLabel" name="lb_0_level">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>60</y>
+     <x>90</x>
+     <y>70</y>
      <width>72</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>等级：LV1</string>
+    <string>LV1</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pb_gold">
+  <widget class="QPushButton" name="pb_0_gold">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>30</y>
+     <x>280</x>
+     <y>50</y>
      <width>31</width>
      <height>28</height>
     </rect>
@@ -89,11 +68,11 @@
     <string>币</string>
    </property>
   </widget>
-  <widget class="QLabel" name="lb_gold">
+  <widget class="QLabel" name="lb_0_gold">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>40</y>
+     <x>320</x>
+     <y>60</y>
      <width>51</width>
      <height>16</height>
     </rect>
@@ -102,11 +81,11 @@
     <string>100000</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pb_diamond">
+  <widget class="QPushButton" name="pb_0_diamond">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>30</y>
+     <x>380</x>
+     <y>50</y>
      <width>31</width>
      <height>28</height>
     </rect>
@@ -115,11 +94,11 @@
     <string>钻</string>
    </property>
   </widget>
-  <widget class="QLabel" name="lb_diamond">
+  <widget class="QLabel" name="lb_0_diamond">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>40</y>
+     <x>420</x>
+     <y>60</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -132,19 +111,22 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>80</y>
-     <width>411</width>
-     <height>681</height>
+     <y>100</y>
+     <width>481</width>
+     <height>901</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <property name="tabPosition">
-    <enum>QTabWidget::North</enum>
+    <enum>QTabWidget::South</enum>
    </property>
    <property name="tabShape">
     <enum>QTabWidget::Rounded</enum>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="iconSize">
     <size>
@@ -172,13 +154,13 @@
    </property>
    <widget class="QWidget" name="tb_game">
     <attribute name="title">
-     <string>  游戏 </string>
+     <string>   游戏  </string>
     </attribute>
-    <widget class="QPushButton" name="pb_qqgroup">
+    <widget class="QPushButton" name="pb_1_qqgroup">
      <property name="geometry">
       <rect>
-       <x>330</x>
-       <y>600</y>
+       <x>400</x>
+       <y>10</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -187,50 +169,59 @@
       <string>官方群</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_random">
+    <widget class="QPushButton" name="pb_1_random">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>480</y>
+       <x>140</x>
+       <y>690</y>
        <width>201</width>
        <height>51</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>随机匹配</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_createRoom">
+    <widget class="QPushButton" name="pb_1_createRoom">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>340</y>
+       <x>140</x>
+       <y>550</y>
        <width>201</width>
        <height>51</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(0, 115, 115);</string>
      </property>
      <property name="text">
       <string>创建房间</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_roomList">
+    <widget class="QPushButton" name="pb_1_roomList">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>410</y>
+       <x>140</x>
+       <y>620</y>
        <width>201</width>
        <height>51</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(0, 115, 115);</string>
      </property>
      <property name="text">
       <string>房间列表</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_rank">
+    <widget class="QPushButton" name="pb_1_rank">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>600</y>
+       <x>210</x>
+       <y>10</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -239,11 +230,11 @@
       <string>排行</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_course">
+    <widget class="QPushButton" name="pb_1_course">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>600</y>
+       <x>310</x>
+       <y>10</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -252,11 +243,11 @@
       <string>教程</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_reward">
+    <widget class="QPushButton" name="pb_1_reward">
      <property name="geometry">
       <rect>
-       <x>90</x>
-       <y>600</y>
+       <x>110</x>
+       <y>10</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -265,11 +256,11 @@
       <string>抽奖</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pb_task">
+    <widget class="QPushButton" name="pb_1_task">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>600</y>
+       <y>10</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -281,23 +272,52 @@
    </widget>
    <widget class="QWidget" name="tb_space">
     <attribute name="title">
-     <string> 动态 </string>
+     <string>  动态  </string>
     </attribute>
    </widget>
    <widget class="QWidget" name="tb_chat">
     <attribute name="title">
-     <string> 消息 </string>
+     <string>  消息  </string>
     </attribute>
    </widget>
    <widget class="QWidget" name="tb_friend">
     <attribute name="title">
-     <string> 好友 </string>
+     <string>  好友  </string>
     </attribute>
    </widget>
    <widget class="QWidget" name="tb_mine">
     <attribute name="title">
-     <string> 我的  </string>
+     <string>  我的   </string>
     </attribute>
+    <widget class="QPushButton" name="pb_5_setinfo">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>370</y>
+       <width>261</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>修改个人信息</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_5_quiLLogin">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>440</y>
+       <width>261</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>退出当前账号</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QWidget" name="wdg_title" native="true">
@@ -305,12 +325,13 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
-     <height>31</height>
+     <width>481</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(222, 222, 222);</string>
+    <string notr="true">background-color: rgb(222, 222, 222);
+border-color: rgb(36, 53, 81);</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
@@ -445,6 +466,27 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="pb_0_icon">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>40</y>
+     <width>61</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <resources/>
