--- a/werewolf/roomlistform.ui
+++ b/werewolf/roomlistform.ui
@@ -42,9 +42,9 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>20</y>
-     <width>31</width>
-     <height>28</height>
+     <y>10</y>
+     <width>21</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -54,7 +54,7 @@
   <widget class="QLabel" name="lb_num">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>280</x>
      <y>40</y>
      <width>51</width>
      <height>21</height>
@@ -63,8 +63,8 @@
    <property name="font">
     <font>
      <pointsize>11</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
@@ -80,7 +80,7 @@
      <x>70</x>
      <y>10</y>
      <width>51</width>
-     <height>51</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -90,9 +90,9 @@
   <widget class="QPushButton" name="pb_joinRoom">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>330</x>
      <y>20</y>
-     <width>41</width>
+     <width>31</width>
      <height>31</height>
     </rect>
    </property>
@@ -103,7 +103,7 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>240</x>
      <y>10</y>
      <width>31</width>
      <height>28</height>
@@ -116,7 +116,7 @@
   <widget class="QLabel" name="lb_state">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>270</x>
      <y>10</y>
      <width>61</width>
      <height>31</height>
@@ -129,10 +129,10 @@
   <widget class="QLabel" name="lb_level">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>20</y>
-     <width>51</width>
-     <height>31</height>
+     <x>240</x>
+     <y>40</y>
+     <width>31</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -155,6 +155,19 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="lb_roomid">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>30</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>房间号：123456</string>
+   </property>
+  </widget>
   <zorder>label</zorder>
   <zorder>pb_room</zorder>
   <zorder>pb_mode</zorder>
@@ -164,6 +177,7 @@
   <zorder>pushButton</zorder>
   <zorder>lb_state</zorder>
   <zorder>lb_level</zorder>
+  <zorder>lb_roomid</zorder>
  </widget>
  <resources/>
  <connections/>
