--- a/werewolf/roomlistform.ui
+++ b/werewolf/roomlistform.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>375</width>
+    <width>455</width>
     <height>70</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>375</width>
+    <width>455</width>
     <height>70</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>375</width>
+    <width>455</width>
     <height>70</height>
    </size>
   </property>
@@ -41,7 +41,7 @@
   <widget class="QPushButton" name="pb_mode">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>140</x>
      <y>10</y>
      <width>21</width>
      <height>21</height>
@@ -54,10 +54,10 @@
   <widget class="QLabel" name="lb_num">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>40</y>
+     <x>240</x>
+     <y>20</y>
      <width>51</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -79,18 +79,18 @@
     <rect>
      <x>70</x>
      <y>10</y>
-     <width>51</width>
-     <height>21</height>
+     <width>61</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>xx玩法</string>
+    <string>基础玩法</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pb_joinRoom">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>400</x>
      <y>20</y>
      <width>31</width>
      <height>31</height>
@@ -103,8 +103,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>10</y>
+     <x>300</x>
+     <y>20</y>
      <width>31</width>
      <height>28</height>
     </rect>
@@ -116,8 +116,8 @@
   <widget class="QLabel" name="lb_state">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>10</y>
+     <x>330</x>
+     <y>20</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -129,10 +129,10 @@
   <widget class="QLabel" name="lb_level">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>40</y>
+     <x>200</x>
+     <y>20</y>
      <width>31</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -144,7 +144,7 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>361</width>
+     <width>431</width>
      <height>51</height>
     </rect>
    </property>
