--- a/werewolf/roomdialog.ui
+++ b/werewolf/roomdialog.ui
@@ -371,7 +371,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>220</y>
+     <y>190</y>
      <width>261</width>
      <height>41</height>
     </rect>
@@ -381,6 +381,35 @@ color: rgb(255, 255, 255);</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_operate">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>250</y>
+     <width>261</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 255, 127);font: 12pt &quot;隶书&quot;;</string>
+   </property>
+   <property name="text">
+    <string>this</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="tb_message">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>320</y>
+     <width>261</width>
+     <height>311</height>
+    </rect>
    </property>
   </widget>
  </widget>
