--- a/werewolf/roomplayerform.ui
+++ b/werewolf/roomplayerform.ui
@@ -61,6 +61,9 @@
      <height>61</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
    <property name="text">
     <string/>
    </property>
